Tradução para português

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,11 +24,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    <a class="nav-link" href="/equipes">Add</a>
-                    <a class="nav-link" href="/exportar">Export</a>
-                    <a class="nav-link" href="/deleteDB">Delete info</a>
-                    <a class="nav-link" href="/deleteEquipes">Delete teams</a>
+                    <a class="nav-link active" aria-current="page" href="/">Página Inicial</a>
+                    <a class="nav-link" href="/equipes">Adicionar Equipes</a>
+                    <a class="nav-link" href="/exportar">Exportar Dados</a>
+                    <a class="nav-link" href="/deleteDB">Excluir Dados</a>
+                    <a class="nav-link" href="/deleteEquipes">Excluir Técnicos</a>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
     <div class="container">
         <footer class="d-flex fixed-bottom flex-wrap justify-content-center align-items-center border-top">
             <div class="align-items-center">
-                <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Made by Thiago Pereira | oFlik</span>
+                <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Feito por Thiago Pereira | oFlik</span>
             </div>
         </footer>
     </div>
