--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
                     <a class="nav-link active" aria-current="page" href="/">Página Inicial</a>
                     <a class="nav-link" href="/equipes">Adicionar Equipes</a>
                     <a class="nav-link" href="/exportar">Exportar Dados</a>
-                    <a class="nav-link" href="/deleteDB">Excluir Dados</a>
+                    <a class="nav-link" onclick="confirmacao()" href="/deleteDB">Excluir Dados</a>
                     <a class="nav-link" href="/deleteEquipes">Excluir Técnicos</a>
                 </div>
             </div>
@@ -48,5 +48,20 @@
         </footer>
     </div>
 </body>
+
+<script>
+    function confirmacao() {
+        let text = "Você está prestes a excluir todas as informações\nDeseja prosseguir?"
+
+        if (confirm(text) == true) {
+            return true
+        } else {
+            event.stopPropagation()
+            event.preventDefault()
+        }
+
+    }
+
+</script>
 
 </html>
